updated to emr 7